src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A22.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A22 {

  class A;

  association assoc0 String  -> A ;
  association assoc1 String <-> A ;
  association assoc2 A      <-> String ;
  association assoc3 String --  String ;
  association assoc4 A      <- String ;

}
